--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "18.X"
+    "node": "18.x"
   },
   "scripts": {
     "start": "node index.js"
